# BO-TPE-ESOL-COMPARE

./: .gitignore  Makefile  README.md  matplotlibrc  pyproject.toml  pyrightconfig.json
output/: fine_best_config_for_test_eval.json
output/matplotlib-cache/: fontlist-v390.json
output/simulation/coarse_bo/bayes_a0/: metadata.json  trials.csv  trials.json  trials.sqlite
output/simulation/coarse_bo/bayes_a1/: metadata.json  trials.csv  trials.json  trials.sqlite
output/simulation/coarse_bo/bayes_a10/: metadata.json  trials.csv  trials.json  trials.sqlite
output/simulation/coarse_bo/bayes_a11/: metadata.json  trials.csv  trials.json  trials.sqlite
output/simulation/coarse_bo/bayes_a12/: metadata.json  trials.csv  trials.json  trials.sqlite
output/simulation/coarse_bo/bayes_a13/: metadata.json  trials.csv  trials.json  trials.sqlite
output/simulation/coarse_bo/bayes_a14/: metadata.json  trials.csv  trials.json  trials.sqlite
output/simulation/coarse_bo/bayes_a2/: metadata.json  trials.csv  trials.json  trials.sqlite
output/simulation/coarse_bo/bayes_a3/: metadata.json  trials.csv  trials.json  trials.sqlite
output/test_eval/: bo_winner_fresh_splits_10.csv  bo_winner_n10_k3.csv  lasso_rdkit_baseline.csv  marginal_rec_config.json  marginal_rec_fresh_splits.csv  marginal_rec_fresh_splits_10.csv  marginal_rec_n10_k3.csv  marginal_rec_scaffold_splits.csv  winner_fresh_splits_20260520_094325.csv
scripts/benchmark/: bayes_test.sh  optuna_tpe_test.sh  random_test.sh  test.sh
scripts/coarse/: bayes.sh  optuna_tpe.sh  random.sh
scripts/fine/: bayes.sh  optuna_tpe.sh  random.sh  submit_all.sh
src/: evaluate_hpo_winner_fresh_splits.py  evaluate_lasso_baseline.py  evaluate_scaffold_split.py  run_bayes.py  run_optuna.py  run_random.py
src/helpers/: bayes.py  data_utils.py  models.py  rng.py  search_shared.py  storage.py  training.py
(+444 files in other folders)
